syntax = "proto3";

package blog;

option java_package = "com.gRPC.blog";
option java_multiple_files = true;

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}
message CreateBlogRequest {
    Blog blog = 1; // id will be empty
}
message CreateBlogResponse {
    Blog blog = 1; // id will set from mongodb
}
message ReadBlogRequest{
    string id = 1;
}
message ReadBlogResponse {
    Blog blog = 1;
}
message UpdateBlogRequest{
    Blog blog = 1;
}
message UpdateBlogResponse {
    Blog blog = 1;
}
message DeleteBlogRequest{
    string id = 1;
}
message DeleteBlogResponse {
    string id = 1;
}
message ListBlogRequest{
    Blog blog =1;
}
message ListBlogResponse{
    Blog blog =1;
}
service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {};
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {};
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {};
    rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse) {};
}